<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_offers"
        android:title="@string/offers"/>

    <item
        android:id="@+id/navigation_myList"
        android:icon="@drawable/ic_fav"
        android:title="@string/my_list"/>

    <item
        android:id="@+id/navigation_about_app"
        android:icon="@drawable/ic_companies"
        android:title="@string/companies"/>

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/userModel"/>

</menu>
